# goit-pycore-personal-assistant-group-10

./: .gitignore  README.md  add_contact.py  address_book.py  ai_assistant.py  commands.py  main.py  notes.py  pyproject.toml  requirements.txt  styles.py  text_utils.py  welcome_message.py
data_types/: __init__.py  address_field.py  birthday_field.py  contact_types.py  days_field.py  email_field.py  field_base.py  field_utils.py  fields.py  name_field.py  note_id_field.py  note_text_field.py  note_types.py  phone_field.py  tag_field.py
db/: __init__.py  contacts_db.py  db_provider.py  pickle_db_provider.py  session.py  sqlite_db_provider.py
feature/Edit-Delete/: edit_delete_contacts.py
features/edit-delete/: edit_delete_contacts.py  edit_delete_records.py
features/search_contact/: search_contacts.py
features/validators/: validators.py
orm/: __init__.py  models.py
